made background of inputs lighter than rest of card, fixed alignment of add button

--- a/Applications.GenuisReader/Applications.GenuisReader/ClientApp/src/app/components/series/add-series/add-series.component.scss
+++ b/Applications.GenuisReader/Applications.GenuisReader/ClientApp/src/app/components/series/add-series/add-series.component.scss
@@ -23,9 +23,11 @@ mat-card {
 mat-form-field {
     padding: 5px;
 }
-span#tag-holder {
-    width: 50%;
+
+mat-form-field.highlight-my-child > div{
+    background-color: #FFE5EC !important;
 }
-span#selected-tags {
-    width: 50%;
+
+button#confirm-button {
+    margin-left: 12px;
 }
